--- a/codecov.yml
+++ b/codecov.yml
@@ -7,6 +7,6 @@
 # 
 
 ignore:
-  - "Sources/SpeziHealthKit/Sample Types/SampleType+QuantityTypes.swift"
-  - "Sources/SpeziHealthKit/Sample Types/SampleType+CategoryTypes.swift"
-  - "Sources/SpeziHealthKit/Sample Types/SampleType+CorrelationTypes.swift"
+  - "Sources/SpeziHealthKit/Sample Types/SampleType\\+QuantityTypes.swift"
+  - "Sources/SpeziHealthKit/Sample Types/SampleType\\+CategoryTypes.swift"
+  - "Sources/SpeziHealthKit/Sample Types/SampleType\\+CorrelationTypes.swift"
