Query Property Wrappers, HealthChart, and Other Refactoring (#27)
# query property wrappers, HealthChart, other refactoring

## :recycle: Current situation & Problem
The HealthKit module currently only provides access to HealthKit data
via long-running anchor queries that deliver information about
new/deleted objects to the app's Standard.
It does not provide any facilities for querying for past samples, or
accessing health data from SwiftUI. This PR attempts to address these
issues.

Furthermore, the HealthKit module is lacking an API allowing spezi users
to integrate custom HealthKit permission requests into the module's
permission handling (i.e., you currently can only request HealthKit
access for some specific sample type by actively defining a long-running
observer for that sample type).

Furthermore, this PR attempts to implement a `HealthChart` view, which
can display various types of queried HealthKit data as a chart.

resolves #8 
requires https://github.com/StanfordSpezi/SpeziFoundation/pull/19
requires https://github.com/StanfordBDHG/XCTestExtensions/pull/28


## :gear: Release Notes 
- Added `HealthKitQuery` property wrapper
- Added `HealthKitStatisticsQuery` property wrapper
- Added `HealthKitCharacteristicQuery` property wrapper
- Added `HealthChart` view
- Extended `HealthKit` configuration API to allow users to specify
sample types the system should request read and/or write access to
- Removed `CollectSamples`. The same functionality can be achieved using
a `for` loop creating individual `CollectSample` instances.


## :books: Documentation
All added new and changed existing APIs are documented. The DocC
structure was reworked and some key aspects of SpeziHealthKit now have
dedicated article/extension pages.


## :white_check_mark: Testing
The new and changed APIs are tested using both "normal" unit tests and
UI tests. Existing tests were kept and adapted where possible


## :pencil: Code of Conduct & Contributing Guidelines 

By submitting creating

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -20,22 +20,24 @@ jobs:
     name: Build and Test Swift Package
     uses: StanfordSpezi/.github/.github/workflows/xcodebuild-or-fastlane.yml@v2
     with:
-      artifactname: SpeziHealthKit.xcresult
       runsonlabels: '["macOS", "self-hosted"]'
-      scheme: SpeziHealthKit
+      scheme: SpeziHealthKit-Package
+      artifactname: SpeziHealthKit-Package.xcresult
+      resultBundle: SpeziHealthKit-Package.xcresult
   buildandtestuitests:
     name: Build and Test UI Tests
     uses: StanfordSpezi/.github/.github/workflows/xcodebuild-or-fastlane.yml@v2
     with:
-      artifactname: TestApp.xcresult
       runsonlabels: '["macOS", "self-hosted"]'
       path: 'Tests/UITests'
       scheme: TestApp
+      artifactname: TestApp.xcresult
+      resultBundle: TestApp.xcresult
   uploadcoveragereport:
     name: Upload Coverage Report
     needs: [buildandtest, buildandtestuitests]
     uses: StanfordSpezi/.github/.github/workflows/create-and-upload-coverage-report.yml@v2
     with:
-      coveragereports: SpeziHealthKit.xcresult TestApp.xcresult
+      coveragereports: SpeziHealthKit-Package.xcresult TestApp.xcresult
     secrets:
       token: ${{ secrets.CODECOV_TOKEN }}
