fix some oversights (restore stanford bundle ID & dev team, etc)

--- a/Tests/UITests/UITests.xcodeproj/xcshareddata/xcschemes/TestApp.xcscheme
+++ b/Tests/UITests/UITests.xcodeproj/xcshareddata/xcschemes/TestApp.xcscheme
@@ -83,7 +83,7 @@
       <CommandLineArguments>
          <CommandLineArgument
             argument = "--collectedSamplesOnly"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </CommandLineArgument>
       </CommandLineArguments>
    </LaunchAction>
