--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,6 +31,8 @@ jobs:
             destination: 'platform=iOS Simulator,name=iPhone 16 Pro'
           - name: macOS
             destination: 'platform=macOS,arch=arm64'
+          - name: macOS Catalyst
+            destination: 'platform=macOS,arch=arm64,variant=Mac Catalyst'
           - name: watchOS
             destination: 'platform=watchOS Simulator,name=Apple Watch Series 10 (46mm)'
           - name: visionOS
