--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,7 +31,7 @@ jobs:
             destination: 'platform=iOS Simulator,name=iPhone 16 Pro'
           - name: macOS
             destination: 'platform=macOS,arch=arm64'
-          - name: macOS Catalyst
+          - name: 'Mac Catalyst'
             destination: 'platform=macOS,arch=arm64,variant=Mac Catalyst'
           - name: watchOS
             destination: 'platform=watchOS Simulator,name=Apple Watch Series 10 (46mm)'
